[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/GameComponents/VolleyNet/art/volley_net.png" type="Texture" id=1]
[ext_resource path="res://GameComponents/VolleyNet/volley_net.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=4]
bounce = 0.1

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 150 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 100 )

[node name="VolleyNet" type="StaticBody2D"]
physics_material_override = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 2, -136 )
rotation = 0.785398
shape = SubResource( 2 )

[node name="Area2DLeft" type="Area2D" parent="."]
position = Vector2( -22, -66 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DLeft"]
shape = SubResource( 3 )

[node name="Area2DRight" type="Area2D" parent="."]
position = Vector2( 22, -66 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DRight"]
shape = SubResource( 3 )
